[Fix] Add webkit-scrollbar display none to HIDE scrollbar in carousels

--- a/vista-principal/styles.css
+++ b/vista-principal/styles.css
@@ -223,3 +223,8 @@ body {
     flex-direction: column;
   }
 }
+
+/*ELIMINAR LA BARRA DE SCROLL DEBAJO DEL CAROUSEL*/
+::-webkit-scrollbar {
+    display: none;
+  }
